# tinycontracts

./: .gitignore  README.md  pyproject.toml
src/: cli.py  loader.py  routes.py  schema.py  server.py
tinycontracts/: __init__.py  cli.py  server.py
